Add teacher to subject grade
