# app/Http/Resources/Grade.php
@@ -18,9 +18,12 @@ class Grade extends Resource
           'id' => $this->id,
           'name' => $this->name,
           'archived' => !!$this->archived,
-          'teacherId' => $this->teacher_id,
+          'teacher' => $this->teacher,
           'grade' => $this->whenPivotLoaded('grades', function () {
               return $this->pivot->grade;
+          }),
+          'gradeDate' => $this->whenPivotLoaded('grades', function () {
+              return is_null($this->pivot->created_at) ? null : $this->pivot->created_at->toDateTimeString();
           }),
           'createdAt' => is_null($this->created_at) ? null : $this->created_at->toDateTimeString(),
           'updatedAt' => is_null($this->updated_at) ? null : $this->updated_at->toDateTimeString(),
