# storage/api-docs/api-docs.json
@@ -2298,8 +2298,8 @@
             "archived": {
               "type": "boolean"
             },
-            "teacherId": {
-              "type": "integer"
+            "teacher": {
+              "$ref": "#/definitions/User"
             },
             "grade": {
               "type": "number",
